@@ -1,8 +1,8 @@
 name    = WWW-Postmark
 author  = Ido Perlmuter <ido@ido50.net>
-license = Perl_5
+license = Apache_2_0
 copyright_holder = Ido Perlmuter
-copyright_year   = 2015
+copyright_year   = 2017
 
 [@IDOPEREL]
 
